[project]
name = "ai-trading-backend"
version = "0.1.0"
description = "AI Trading System - Feature Store & Trading Engine"
authors = [
    {name = "AI Trading Team", email = "team@aitrading.com"}
]
requires-python = ">=3.14"
dependencies = [
    # Core
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Async & Database
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    # psycopg removed - using asyncpg only

    # Data & ML
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.32",
    "scikit-learn>=1.3.0",

    # AI APIs
    "anthropic>=0.7.0",
    "openai>=1.3.0",

    # Monitoring
    "prometheus-client>=0.19.0",

    # Utils
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-redis>=3.0.0",
    "testcontainers>=3.7.0",

    # Code Quality
    "ruff>=0.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",

    # Tools
    "ipython>=8.17.0",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=data",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (require Docker)",
    "performance: Performance benchmarks",
    "slow: Slow-running tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["data"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
